# nimble-dev

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
.github/: copilot-instructions.md
.github/agents/: nimble-command.agent.md  nimble-conventions.md  nimble-script.agent.md  nimble-spec.yaml
.github/prompts/: new-action.prompt.md  release.prompt.md
.github/skills/nimble-authoring/: SKILL.md  nimble-spec.yaml
.github/workflows/: ci.yml  release.yml  sync-public.yml
.vibe/: decisions-details.md  decisions.md  development-plan.md
.vibe/icons/: gen-tray-icon.py  nimble-icons.html
.vibe/reviews/: built-in-variables.md  config-directory-hybrid-approaches.md  config-directory-layout.md  list-vs-command-spec-filename.md  user-data-directory.md  user-defined-variables.md  workflow-brainstorm-vs-planner.md
.vibe/what-ifs/bundled-scripts/: config-examples.md  summary.md  ux-impact.md
.vibe/what-ifs/cache-data-dirs/: config-examples.md  summary.md  ux-impact.md
.vibe/what-ifs/command-authoring-agents/: agent-specs.md  summary.md  ux-impact.md
.vibe/what-ifs/command-filename-convention/: config-examples.md  summary.md  ux-impact.md
.vibe/what-ifs/context-any-position/: config-examples.md  summary.md  ux-impact.md
.vibe/what-ifs/data-dir/: config-examples.md  summary.md  ux-impact.md
.vibe/what-ifs/edit-slash-command/: summary.md
.vibe/what-ifs/github-repo-command-sources/: config-examples.md  security.md  summary.md  ux-impact.md
.vibe/what-ifs/inline-static-list/: config-examples.md  summary.md  (+2 more)
docs/: development-plan.md  development-setup.md  first-run.md  getting-started.md  motivation.md  roadmap.md
docs/actions/: README.md  dynamic-list.md  open-url.md  paste-text.md  script-action.md  static-list.md
docs/guides/: README.md  configuring-commands.md  contexts.md  copilot-agents.md  copilot-skill.md  deploying-agents.md  deploying-skill.md  writing-scripts.md
docs/reference/: README.md  config-directory.md  duplicate-commands.md  tips-and-tricks.md
docs/using/: README.md  basic-functionality.md  config-directory.md  configuring-commands.md  duplicate-commands.md  first-run.md  script-extensions.md  tips-and-tricks.md
example-config/: README.md  env.yaml  settings.yaml
example-config/scripts/: greeting.sh  hello.sh  morning-sites.sh
flatpak/: app.contextactions.App.json  app.nimble.App.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  settings.rs  watcher.rs
src/lib/: types.ts
src/routes/: +page.svelte
winget/: Surdy.ContextActions.yaml  Surdy.Nimble.yaml
(+61 files in other folders)
